--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,18 +3,10 @@ body {
 	margin: 0;
 	padding: 0;
 
-	font-family:
-		-apple-system,
-		BlinkMacSystemFont,
-		"Segoe UI",
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		"Fira Sans",
-		"Droid Sans",
-		"Helvetica Neue",
-		sans-serif;
+	color: var(--black);
+	background: #F5F6F8;
+
+	font-family: var(--font-family);
 }
 
 a {
@@ -25,4 +17,18 @@ a {
 
 * {
 	box-sizing: border-box;
+}
+
+:root {
+	--black: #3B434E;
+	--grey-light: #EBEBEB;
+	--white: white;
+	--primary: #7653FC;
+	--primary-hover: #6344DF;
+	--red: #FC836D;
+	--green: #1DC37E;
+	--green-light: #C8F8E4;
+	--font-family:
+		"Noto Sans Display",
+		sans-serif;
 }
