--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -124,3 +124,23 @@
 
 	border-left: 2px solid var(--red);
 }
+
+.characteristic {
+	display: grid;
+	align-items: center;
+
+	padding-right: 60px;
+
+	font-size: 16px;
+	line-height: 32px;
+	grid-template-columns: auto 1fr auto;
+	gap: 10px;
+}
+
+.characteristicsName {
+	font-weight: bold;
+}
+
+.characteristicsDots {
+	border-bottom: 1px dashed var(--grey-light);
+}
