--- a/page-components/TopPageComponent/TopPageComponent.module.css
+++ b/page-components/TopPageComponent/TopPageComponent.module.css
@@ -1,8 +1,10 @@
 .title {
 	display: grid;
-	grid-template-columns: auto 1fr auto;
 
 	align-items: baseline;
+
+	margin-bottom: 30px;
+	grid-template-columns: auto 1fr auto;
 	justify-items: left;
 	gap: 20px;
 }
@@ -39,4 +41,10 @@
 	font-size: 20px;
 	font-weight: 600;
 	line-height: 27px;
+}
+
+@media screen and (max-width: 640px) {
+	.title {
+		grid-template-columns: auto 1fr;
+	}
 }
