--- a/components/ReviewForm/ReviewForm.module.css
+++ b/components/ReviewForm/ReviewForm.module.css
@@ -1,43 +1,70 @@
-.review {
+.reviewForm {
 	display: grid;
-	grid-template-columns: [start] auto 1fr auto auto [end];
-
 	align-items: center;
-	gap: 10px;
 
 	font-size: 14px;
 	line-height: 24px;
+	grid-template-columns: [start] auto 1fr auto [end];
+	gap: 20px 30px;
 }
 
-.description {
+.title {
+	justify-self: left;
+}
+
+.description,
+.submit {
 	grid-column: start / end;
 }
 
-.date {
-	margin-right: 10px;
+.info {
+	margin-left: 15px;
 }
 
-.name {
+.rating {
+	display: grid;
+	grid-template-columns: auto 1fr;
+	gap: 20px;
+}
+
+.success {
+	position: relative;
+
+	margin-top: 20px;
+	padding: 20px;
+
+	border-radius: 5px;
+	background: var(--green-light);
+}
+
+.successTitle {
 	font-weight: bold;
 }
 
-@media screen and (max-width: 640px) {
-	.review {
-		grid-template-columns: [start] 30px [titlestart] auto [dateend] 1fr [end];
+.close {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+
+	cursor: pointer;
+}
+
+@media screen and (max-width: 1129px) {
+	.reviewForm {
+		grid-template-columns: [start] 1fr 1fr [end];
 	}
 
 	.title {
-		grid-column: titlestart / end;
+		justify-self: normal;
 	}
 
-	.date {
-		grid-column: start / dateend;
+	.rating {
+		grid-column: start / end;
 	}
 }
 
-@media screen and (max-width: 480px) {
-	.date,
-	.rating {
-		grid-column: start / end;
+@media screen and (max-width: 640px) {
+	.reviewForm {
+		grid-template-columns: [start] 1fr [end];
 	}
 }
