--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,13 +23,13 @@ a {
 	--black: #3B434E;
 	--grey: #A4A4A4;
 	--grey-light: #EBEBEB;
-	--grey-dark: #787D85;
+	--grey-dark: #6C7077;
 	--white: white;
-	--primary: #7653FC;
+	--primary: #7351F5;
 	--primary-hover: #6344DF;
 	--red: #FC836D;
 	--red-light: #FEA291;
-	--green: #1DC37E;
+	--green: #007B48;
 	--green-light: #C8F8E4;
 	--font-family:
 		"Noto Sans Display",
