--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -28,10 +28,10 @@
 	text-transform: uppercase;
 
 	color: var(--grey-dark);
+	outline-offset: -1px;
 
 	font-size: 12px;
 	font-weight: 300;
-	line-height: 16px;
 }
 
 .secondBlock {
@@ -54,10 +54,10 @@
 	cursor: pointer;
 
 	color: var(--grey-dark);
+	outline-offset: -1px;
 
 	font-size: 14px;
 	font-weight: 500;
-	line-height: 19px;
 }
 
 .thirdLevelActive,
