--- a/components/Sort/Sort.module.css
+++ b/components/Sort/Sort.module.css
@@ -20,16 +20,27 @@
 	gap: 40px;
 }
 
-.sort span {
+.sortName {
+	display: none;
+}
+
+.sort button {
 	display: grid;
-	gap: 8px;
-	grid-template-columns: 20px 1fr;
 
 	align-items: center;
 
 	cursor: pointer;
+
+	border: none;
+	background: none;
+
+	font-size: 16px;
+	font-weight: bold;
+	line-height: 22px;
+	gap: 8px;
+	grid-template-columns: 20px 1fr;
 }
 
-.sort span:not(.active) {
+.sort button:not(.active) {
 	grid-template-columns: 1fr;
 }
