--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -11,6 +11,12 @@
 	gap: 20px;
 }
 
+.firstLevelList {
+	padding: 0;
+
+	list-style: none;
+}
+
 .firstLevelActive,
 .firstLevel:hover {
 	color: var(--primary);
@@ -23,12 +29,16 @@
 
 .secondLevel {
 	margin-bottom: 10px;
+	padding: 0;
 
 	cursor: pointer;
 	text-transform: uppercase;
 
 	color: var(--grey-dark);
+	border: none;
 	outline-offset: -1px;
+
+	background: none;
 
 	font-size: 12px;
 	font-weight: 300;
@@ -37,13 +47,19 @@
 .secondBlock {
 	margin-top: 15px;
 	margin-left: 12px;
-	padding-left: 32px;
+	padding: 0 0 0 32px;
+
+	list-style: none;
 
 	border-left: 1px solid #DFDFDF;
 }
 
 .secondLevelBlock {
 	overflow: hidden;
+
+	padding: 0;
+
+	list-style: none;
 }
 
 .thirdLevel {
